--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.4'
-      - run: go test -v -cover
+      - run: go test ./... -v -cover
   release:
     name: Create Release
     runs-on: 'ubuntu-latest'
