--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,14 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.4'
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - run: go test ./... -v -cover
   build:
     name: Build binary
@@ -48,6 +56,14 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.4'
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Get OS and arch info
         run: |
           GOOSARCH=${{matrix.goosarch}}
