--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,38 +1,18 @@
+## This workflow is managed by meta-repo.
+# Please do not edit from the cli repo.
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
-name: Latest Release
+name: Release
 
 defaults:
   run:
     shell: bash
 
 jobs:
-  lint:
-    name: Lint files
-    runs-on: 'ubuntu-latest'
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.16.4'
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
-        with:
-          version: latest
-  test:
-    name: Run tests
-    runs-on: 'ubuntu-latest'
-    needs: lint
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.16.4'
-      - run: go test ./... -v -cover
   release:
     name: Create Release
     runs-on: 'ubuntu-latest'
@@ -57,6 +37,14 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.4'
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Get OS and arch info
         run: |
           GOOSARCH=${{matrix.goosarch}}
