--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,29 +15,37 @@ defaults:
 jobs:
   lint:
     name: Lint files
-    runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v2
         with:
-          version: latest
+          args: --verbose
+          skip-go-installation: true
   test:
     name: Run tests
-    runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     needs: lint
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - run: go test ./... -v -cover
   release:
     name: Create Release
-    runs-on: 'ubuntu-latest'
     needs: test
     strategy:
       matrix:
@@ -51,6 +59,9 @@ jobs:
           - 'windows/386'
           - 'windows/amd64'
           - 'windows/arm'
+        go-version: [1.16.x]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
@@ -58,7 +69,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - uses: actions/cache@v2
         with:
           path: |
