--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,21 @@ defaults:
 jobs:
   lint:
     name: Lint files
-    runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2.5.2
+        uses: golangci/golangci-lint-action@v2
         with:
-          version: latest
+          args: --verbose
+          skip-go-installation: true
   test:
     name: Run tests
     runs-on: 'ubuntu-latest'
@@ -34,7 +39,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - uses: actions/cache@v2
         with:
           path: |
@@ -46,19 +51,21 @@ jobs:
       - run: go test ./... -v -cover
   build:
     name: Build binary
-    runs-on: 'ubuntu-latest'
     needs: test
     strategy:
       matrix:
         goosarch:
           - 'darwin/amd64'
           - 'linux/amd64'
+        go-version: [1.16.x]
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
         with:
-          go-version: '1.16.4'
+          go-version: ${{ matrix.go-version }}
       - uses: actions/cache@v2
         with:
           path: |
