--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     name: Lint files
     strategy:
       matrix:
-        go-version: '1.16'
+        go-version: ['1.16']
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -57,7 +57,7 @@ jobs:
         goosarch:
           - 'darwin/amd64'
           - 'linux/amd64'
-        go-version: '1.16'
+        go-version: ['1.16']
         platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     steps:
