--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,12 @@ jobs:
           skip-go-installation: true
   test:
     name: Run tests
-    runs-on: 'ubuntu-latest'
     needs: lint
+    strategy:
+      matrix:
+        go-version: ['1.16']
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-go@v2
