--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,12 @@ defaults:
   run:
     shell: bash
 
-strategy:
-  matrix:
-    go-version: ['1.16']
-    platform: [ubuntu-latest]
-    go-osarch: [ 'darwin/amd64', 'linux/amd64' ]
-
 jobs:
   lint:
+    strategy:
+      matrix:
+        go-version: ['1.16']
+        platform: [ubuntu-latest]
     runs-on: ${{ matrix.platform }}
     name: Lint files
     steps:
@@ -33,7 +31,13 @@ jobs:
         with:
           args: --verbose
           skip-go-installation: true
+
   build:
+    strategy:
+      matrix:
+        go-version: ['1.16']
+        platform: [ubuntu-latest]
+        go-osarch: [ 'darwin/amd64', 'linux/amd64' ]
     runs-on: ${{ matrix.platform }}
     needs: lint
     steps:
@@ -49,7 +53,8 @@ jobs:
           key: ${{ runner.os }}-go-${{ matrix.go-osarch }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-linux/amd64-
-      - run: go test ./... -v -cover
+      - name: Execute tests
+        run: go test ./... -v -cover
       - name: Get OS and arch info
         run: |
           GOOSARCH=${{matrix.go-osarch}}
